--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>21.0.1</version>
+      </dependency>
+      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <version>5.7.2</version>
