--- a/xrate-api/pom.xml
+++ b/xrate-api/pom.xml
@@ -7,12 +7,15 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>nemethi</groupId>
   <artifactId>xrate-api</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
 
   <dependencies>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
