--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <modules>
     <module>xrate-api</module>
     <module>xrate-core</module>
+    <module>coverage</module>
   </modules>
 
   <groupId>nemethi</groupId>
@@ -89,13 +90,17 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.7</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.7</version>
         <executions>
           <execution>
             <id>agent-for-unit</id>
