--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
         <version>20210307</version>
       </dependency>
       <dependency>
+        <groupId>info.picocli</groupId>
+        <artifactId>picocli</artifactId>
+        <version>4.5.1</version>
+      </dependency>
+      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <version>5.7.2</version>
