--- a/xrate-core/pom.xml
+++ b/xrate-core/pom.xml
@@ -22,6 +22,10 @@
       <artifactId>json</artifactId>
     </dependency>
     <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
