--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
         <artifactId>mockwebserver</artifactId>
         <version>4.9.1</version>
       </dependency>
+      <dependency>
+        <groupId>com.github.stefanbirkner</groupId>
+        <artifactId>system-lambda</artifactId>
+        <version>1.2.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
