--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,15 @@
   </profiles>
 
   <build>
+    <resources>
+      <resource>
+        <directory>../</directory>
+        <includes>
+          <include>README.md</include>
+          <include>LICENSE</include>
+        </includes>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <plugin>
