--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
           <artifactId>appassembler-maven-plugin</artifactId>
           <version>1.10</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.3.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
