--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
           <artifactId>maven-assembly-plugin</artifactId>
           <version>3.3.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>2.0.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
