--- a/xrate-core/pom.xml
+++ b/xrate-core/pom.xml
@@ -128,6 +128,24 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>generate-third-party-list</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>add-third-party</goal>
+            </goals>
+            <configuration>
+              <excludedArtifacts>xrate</excludedArtifacts>
+              <excludedScopes>test</excludedScopes>
+              <excludeTransitiveDependencies>true</excludeTransitiveDependencies>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
