--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <module>xrate-api</module>
     <module>xrate-core</module>
     <module>coverage</module>
+    <module>plugin-exchangerateapi</module>
   </modules>
 
   <groupId>nemethi</groupId>
@@ -37,6 +38,11 @@
         <groupId>info.picocli</groupId>
         <artifactId>picocli</artifactId>
         <version>4.5.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.juneau</groupId>
+        <artifactId>juneau-rest-client</artifactId>
+        <version>8.2.0</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
@@ -134,6 +140,11 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>license-maven-plugin</artifactId>
           <version>2.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.2.4</version>
         </plugin>
       </plugins>
     </pluginManagement>
