--- a/xrate-api/pom.xml
+++ b/xrate-api/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <artifactId>xrate</artifactId>
     <groupId>nemethi</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>xrate-api</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <dependencies>
     <dependency>
