--- a/xrate-core/pom.xml
+++ b/xrate-core/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <artifactId>xrate</artifactId>
     <groupId>nemethi</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>xrate-core</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <properties>
     <main.class>nemethi.xrate.core.Application</main.class>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>nemethi</groupId>
       <artifactId>xrate-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
