--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>nemethi</groupId>
   <artifactId>xrate</artifactId>
   <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
